--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -19,6 +19,7 @@ numpy==1.23.3
 pycodestyle==2.9.1
 pymongo==4.2.0
 python-crfsuite==0.9.8
+python-dotenv==0.21.0
 pyvi==0.1.1
 scikit-learn==1.1.2
 scipy==1.9.2
