--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -5,6 +5,7 @@ Cython==0.29.28
 dnspython==2.2.1
 email-validator==1.3.0
 Flask==2.2.2
+Flask-Cors==3.0.10
 flask-mongoengine==1.0.0
 Flask-WTF==1.0.1
 gensim==4.2.0
